CONTENT-7578 Fix breadcrumbs layout issues

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageHierarchy/css/pages-hierarchy.css
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageHierarchy/css/pages-hierarchy.css
@@ -7,6 +7,10 @@
     background-color: #2fa6eb !important;
 }
 
+.pagePanel .breadcrumbs-container {
+    min-height: 110px;
+}
+
 .pagePanel .pagehierarchy-container {
     overflow: hidden;
     outline: none;
